removing debug outputs

--- a/app/index.html
+++ b/app/index.html
@@ -55,9 +55,9 @@
 
 		<div ui-grid="{ data: gridData }" class=""></div>
 
-		<pre>{{ formModel | json }} </pre>
+	<!--	<pre>{{ formModel | json }} </pre>
 		<pre>{{ formModel.name  | json }} </pre>
-		<pre>{{ formModel.email  | json }} </pre>
+		<pre>{{ formModel.email  | json }} </pre> -->
 
 	</form >
 
